option java_outer_classname = "LCGetTerminalInfosRes";
option java_package = "com.navinfo.opentsp.platform.location.protocol.dataaccess.terminal";

import "core/proto/dataaccess/terminal/java/TerminalInfo.proto";
import "core/proto/common/java/PlatformResponseResult.proto";

message GetTerminalInfosRes{
	required	int32					serialNumber	=1;
	required	PlatformResponseResult	results			=2;
	repeated	TerminalInfo			terminals		=3;
}

